fixed floating new item button on mobile displays

--- a/styles.css
+++ b/styles.css
@@ -938,7 +938,8 @@ label > input[type="checkbox"]:checked + * {
         padding-top: 1rem;
         border-left: var(--sidebar-border);
         opacity: 0;
-        height: 90%
+        height: 100%;
+        flex-grow: 1;
 
     }
     #nav.hide {
@@ -1024,8 +1025,9 @@ label > input[type="checkbox"]:checked + * {
         padding: 1rem;
     }
     #newItem {
+        position: fixed;
         left: 5rem;
-        bottom: 1.5rem;
+        bottom: 10rem;
     }
     #details-form {
         width: 95vw;
